--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,11 @@
 *.o
 *.so
 
+# Sublime files #
+#################
+*.sublime-project
+*.sublime-workspace
+
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
